# AcceleroSnake

./: .gitignore  README.md
src/imu_reader/: package.xml  setup.cfg  setup.py
src/imu_reader/imu_reader/: imu_direction_publisher.py  imu_raw_reader.py
src/snake/: CMakeLists.txt  package.xml
src/snake/include/snake/: Game.hpp
src/snake/src/: DirectionSubscriber.cpp  Game.cpp  main.cpp
